--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,56 @@
 
 /* Your CSS Code here. */
+body {
+  font-family: Arial, sans-serif;
+  background-color: #121212;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  margin: 0;
+}
+
+.wrapper {
+  width: 800px;
+}
+
+video {
+  width: 100%;
+  display: block;
+}
+
+.controls {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 10px;
+}
+
+.controls button,
+.controls input {
+  margin: 5px;
+}
+
+.progress {
+  width: 100%;
+  height: 5px;
+  background-color: #ccc;
+  border: none;
+  cursor: pointer;
+}
+
+.progress__filled {
+  width: 0%;
+  height: 100%;
+  background-color: #ff3b30;
+}
+
+.volume, .playbackSpeed {
+  width: 50%;
+}
+
+.speed-bar {
+  color: #fff;
+  font-size: 1rem;
+  margin-top: 5px;
+}
